--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,16 @@ a {
     color-scheme: dark;
   }
 }
+
+/* estilos del todo list */
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.todo-list-inputText {
+  margin: 10px 0;
+}
