--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -166,4 +166,14 @@ a.secondary {
     filter: invert();
   }
 }
+/* Estilos */
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
 
+.todo-list-inputText {
+  margin: 10px 0;
+}
